# cade

./: .gitattributes  .gitignore  .gitmodules  CLAUDE.md  DESKTOP_IMPLEMENTATION.md  IMPLEMENTATION_COMPLETE.md  Makefile  README.md  SETUP.md  package-lock.json  pyproject.toml  requirements.txt
.cade/: dashboard.yml
.claude/: settings.local.json
.claude/rules/: delegation.md  documentation-organization.md  remote-deployment.md
.roo/rules/: documentation-organization.md
backend/: __init__.py  auth.py  cc_session_resolver.py  cli_chat.py  config.py  connection_manager.py  connection_registry.py  doc_index.py  errors.py  file_tree.py  file_watcher.py  launch_preset.py  login_page.py  main.py  mcp_oauth.py  mcp_servers.py  middleware.py  models.py  modes.py  modes.toml  nkrdn_service.py  protocol.py  pty_manager.py  session.py  session_registry.py  subprocess_utils.py  types.py  user_config.py  websocket.py  wsl_health.py  wsl_path.py
backend/chat/: session.py
core/: __init__.py
deploy/: README.md
desktop/: .gitignore  QUICKSTART.md  README.md  VERIFICATION.md  package-lock.json  package.json
desktop/src-tauri/: Cargo.toml  tauri.conf.json
desktop/src-tauri/icons/: README.md  create-placeholder-icons.ps1  generate-icons.ps1
desktop/src-tauri/src/: config.rs  main.rs  port.rs  python.rs  remote_profiles.rs  ssh_tunnel.rs  tunnel_registry.rs
docs/: README.md
frontend/: .gitignore  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts  vitest.config.ts
plans/: architecture-spec.md  cli-conventions-brainstorm.md  config-file-standards-brainstorm.md  core-vision.md  mvp-scope.md  pane-focus-mode.md  testing-conventions-brainstorm.md  ui-enhancements.md
scripts/: build-backend-sidecar.py  build-desktop.bat  build-desktop.ps1  build-desktop.sh  deploy.sh  dev-dummy.ps1  install-deps.ps1  install-deps.sh  pyinstaller-nkrdn.spec  pyinstaller-scout-browse.spec  pyinstaller.spec  setup-dev.ps1  setup-dev.sh  setup-remote.sh  setup-sudo.sh
(+452 files in other folders)
