[package]
name = "cade"
version = "0.1.0"
description = "Claude Agentic Development Environment"
authors = ["CADE Team"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
tauri = { version = "2.1", features = ["devtools"] }
tauri-plugin-shell = "2.0"
tauri-plugin-dialog = "2.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "5"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.11", features = ["blocking"] }
libc = "0.2"

[features]
custom-protocol = ["tauri/custom-protocol"]
